// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test InternalLinkValue Snapshots and Props Without Props 1`] = `
<div
  class="brz-ed-control__internalLink__value"
  style="position: relative;"
>
  <span
    class="brz-span"
  />
</div>
`;

exports[`Test InternalLinkValue Snapshots and Props className should be className 1`] = `
<div
  class="brz-ed-control__internalLink__value className"
  style="position: relative;"
>
  <span
    class="brz-span"
  />
</div>
`;

exports[`Test InternalLinkValue Snapshots and Props value should be value 1`] = `
<div
  class="brz-ed-control__internalLink__value"
  style="position: relative;"
>
  <span
    class="brz-span"
  >
    value
  </span>
</div>
`;
